--- a/package.json
+++ b/package.json
@@ -5,5 +5,14 @@
   "main": "index.js",
   "repository": "https://github.com/JaganKaartik/Express-Foodle-API",
   "author": "JaganKaartik <kaartikjagan@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^4.6.0",
+    "eslint": "^5.16.0",
+    "eslint-config-airbnb-base": "^14.2.0",
+    "eslint-config-prettier": "^6.15.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "prettier": "^2.1.2",
+    "typescript": "^4.0.5"
+  }
 }
