--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   "author": "JaganKaartik <kaartikjagan@gmail.com>",
   "license": "MIT",
   "devDependencies": {
+    "@types/express": "^4.17.8",
+    "@types/node": "^14.14.5",
     "@typescript-eslint/eslint-plugin": "^4.6.0",
     "eslint": "^5.16.0",
     "eslint-config-airbnb-base": "^14.2.0",
@@ -14,5 +16,8 @@
     "eslint-plugin-prettier": "^3.1.4",
     "prettier": "^2.1.2",
     "typescript": "^4.0.5"
+  },
+  "dependencies": {
+    "express": "^4.17.1"
   }
 }
