--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,6 +12,7 @@
   "plugins": ["prettier", "@typescript-eslint"],
   "rules": {
     "semi": 0,
-    "prettier/prettier": "error"
+    "prettier/prettier": "error",
+    "comma-dangle": "off"
   }
 }
