--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,6 +13,7 @@
   "rules": {
     "semi": 0,
     "prettier/prettier": "error",
-    "comma-dangle": "off"
+    "comma-dangle": "off",
+    "no-console": "off"
   }
 }
