--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "typescript": "^4.0.5"
   },
   "dependencies": {
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.10.11"
   }
