--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,11 +9,30 @@
   "parserOptions": {
     "ecmaVersion": 12
   },
+  "settings": {
+    "import/resolver": {
+      "typescript": {},
+      "node": {
+        "extensions": [".js", ".jsx", ".ts", ".tsx"]
+      }
+    }
+  },
   "plugins": ["prettier", "@typescript-eslint"],
   "rules": {
     "semi": 0,
     "prettier/prettier": "error",
     "comma-dangle": "off",
-    "no-console": "off"
+    "no-console": "off",
+    "import/extensions": [
+      "error",
+      "ignorePackages",
+      {
+        "js": "never",
+        "jsx": "never",
+        "ts": "never",
+        "tsx": "never"
+      }
+    ],
+    "operator-linebreak": ["error", "after"]
   }
 }
