Fixed Ts ERRORS

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,6 +20,7 @@
   "plugins": ["prettier", "@typescript-eslint"],
   "rules": {
     "semi": 0,
+    "no-unused-vars": "off",
     "prettier/prettier": "error",
     "comma-dangle": "off",
     "no-console": "off",
