--- a/package.json
+++ b/package.json
@@ -47,6 +47,8 @@
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "mongoose": "^5.10.11"
+    "mongoose": "^5.10.11",
+    "passport": "^0.4.1",
+    "passport-twitter": "^1.0.4"
   }
 }
