--- a/package.json
+++ b/package.json
@@ -46,8 +46,11 @@
   },
   "dependencies": {
     "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.5",
+    "cookie-session": "^1.4.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "mongoose": "^5.10.11",
     "passport": "^0.4.1",
     "passport-twitter": "^1.0.4"
