Refactored Controllers -- Improve Code Readability

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -36,6 +36,7 @@
     ],
     "noImplicitAny": 0,
     "operator-linebreak": ["error", "after"],
-    "no-underscore-dangle": "off"
+    "no-underscore-dangle": "off",
+    "object-curly-newline": "off"
   }
 }
