Added Seed File. Seed Script

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "dev": "nodemon dist/index",
     "start": "node dist/index",
     "lint": "eslint '*/**/*.ts' --fix",
-    "p": "prettier '*/**/*.ts' --color"
+    "p": "prettier '*/**/*.ts' --color",
+    "seed": "node app/config/seed"
   },
   "husky": {
     "hooks": {
