--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,15 @@ services:
       - foodle-server-app
     depends_on:
       - mongo
+    env_file: .env
+    environment:
+      PORT: ${PORT}
+      MONGO_URL: ${MONGO_URL}
+      TWITTER_CONSUMER_KEY: ${TWITTER_CONSUMER_KEY}
+      TWITTER_CONSUMER_SECRET: ${TWITTER_CONSUMER_SECRET}
+      COOKIE_KEY: ${COOKIE_KEY}
+      CLIENT_HOME_PAGE_URL: ${CLIENT_HOME_PAGE_URL}
+
   mongo:
     image: mongo:3.6.19-xenial
     ports:
