--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,11 @@
 version: '3'
 services:
   foodle-api-server:
-    image: foodle-api-server
+    build:
+      context: .
+      dockerfile: Dockerfile
+    image: node
+    container_name: foodle-api-server
     ports:
       - '7000:7000'
     networks:
