--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,12 @@ services:
       dockerfile: Dockerfile
     image: node
     container_name: foodle-api-server
+    ports:
+      - '7000:7000'
+    networks:
+      - foodle-server-app
+    depends_on:
+      - mongo
     env_file: .env
     environment:
       PORT: ${PORT}
@@ -14,17 +20,18 @@ services:
       TWITTER_CONSUMER_SECRET: ${TWITTER_CONSUMER_SECRET}
       COOKIE_KEY: ${COOKIE_KEY}
       CLIENT_HOME_PAGE_URL: ${CLIENT_HOME_PAGE_URL}
-    ports:
-      - '7000:7000'
-    depends_on:
-      - mongo
 
   mongo:
-    image: mongo:3.6.19-xenial
+    image: mongo:latest
     ports:
       - '27017:27017'
+    networks:
+      - foodle-server-app
     volumes:
       - mongo-data:/data/db
+networks:
+  foodle-server-app:
+    driver: bridge
 volumes:
   mongo-data:
     driver: local
