--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: '3'
 services:
   app:
     container_name: foodle-server
+    restart: always
     build: ./
     env_file: .env
     environment:
@@ -14,7 +15,9 @@ services:
     ports:
       - '7000:7000'
     volumes:
-      - ./app
+      - .:/app
+    depends_on:
+      - mongo
     links:
       - mongo
 
