--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,9 @@
 version: '3'
 services:
   app:
-    container_name: docker-node-mongo
+    container_name: foodle-api-server
     restart: always
     build: .
-    env_file: .env
-    environment:
-      PORT: ${PORT}
-      MONGO_URL: ${MONGO_URL}
-      TWITTER_CONSUMER_KEY: ${TWITTER_CONSUMER_KEY}
-      TWITTER_CONSUMER_SECRET: ${TWITTER_CONSUMER_SECRET}
-      COOKIE_KEY: ${COOKIE_KEY}
-      CLIENT_HOME_PAGE_URL: ${CLIENT_HOME_PAGE_URL}
     ports:
       - '7000:7000'
     external_links:
