--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,7 @@ services:
     build: .
     env_file: .env
     environment:
+      NODE_ENV: ${NODE_ENV}
       PORT: ${PORT}
       MONGO_URL: ${MONGO_URL}
       TWITTER_CONSUMER_KEY: ${TWITTER_CONSUMER_KEY}
