--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.9",
+    "@types/express-validator": "^3.0.0",
     "@types/mongoose": "^5.7.36",
     "@types/node": "^14.14.6",
     "@types/passport": "^1.0.4",
@@ -52,6 +53,7 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-validator": "^6.6.1",
     "mongoose": "^5.10.11",
     "passport": "^0.4.1",
     "passport-twitter": "^1.0.4"
