--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "express-validator": "^6.6.1",
     "mongoose": "^5.10.11",
     "passport": "^0.4.1",
+    "passport-google-oauth2": "^0.2.0",
     "passport-twitter": "^1.0.4"
   }
 }
