--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "cookie-session": "^1.4.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
+    "ejs": "^3.1.5",
     "express": "^4.17.1",
     "express-validator": "^6.6.1",
     "mongoose": "^5.10.11",
