--- a/.gitignore
+++ b/.gitignore
@@ -70,9 +70,11 @@ typings/
 
 # dotenv environment variables file
 .env
-.env.test
-.env.dev
 *.env
+.env.*
+.env.prod
+.env.dev
+.env.test
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
