--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-rate-limit": "^5.2.3",
     "express-validator": "^6.6.1",
     "mongoose": "^5.10.11",
     "passport": "^0.4.1",
