--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -3,4 +3,4 @@ version: '3'
 services:
   foodle-app:
     container_name: foodle-app-test
-    command: yarn start:dev
+    command: yarn start:test
