--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "mongoose": "^5.10.11",
     "passport": "^0.4.1",
     "passport-google-oauth2": "^0.2.0",
-    "passport-twitter": "^1.0.4"
+    "passport-twitter": "^1.0.4",
+    "referrer-policy": "^1.2.0"
   }
 }
