--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "express": "^4.17.1",
     "express-rate-limit": "^5.2.3",
     "express-validator": "^6.6.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.11",
     "passport": "^0.4.1",
     "passport-google-oauth2": "^0.2.0",
