Updated Configs. Package.json -minor

--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,7 @@
   "license": "MIT",
   "scripts": {
     "build": "tsc",
-    "start:dev": "NODE_ENV=development APP_ENV=dev nodemon dist/index",
+    "start:dev": "yarn build && NODE_ENV=development APP_ENV=dev nodemon dist/index",
     "start:test": "NODE_ENV=test APP_ENV=test nodemon dist/index",
     "start:prod": "NODE_ENV=production APP_ENV=prod node dist/index",
     "lint": "eslint '*/**/*.ts'",
