--- a/client/package.json
+++ b/client/package.json
@@ -5,9 +5,13 @@
   "dependencies": {
     "@atlaskit/button": "^13.3.5",
     "@atlaskit/modal-dialog": "^10.5.0",
+    "@craco/craco": "^6.1.1",
+    "@tailwindcss/postcss7-compat": "^2.0.4",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
+    "autoprefixer": "^9",
+    "postcss": "^7",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
@@ -18,12 +22,13 @@
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
     "semantic-ui-react": "^0.88.2",
-    "styled-components": "^5.2.1"
+    "styled-components": "^5.2.1",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "craco start",
+    "build": "craco build",
+    "test": "craco test",
     "eject": "react-scripts eject",
     "p": "prettier --write 'src/**/*.jsx' 'src/**/*.js'",
     "lint": "eslint .",
