--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
     "autoprefixer": "^9",
+    "axios": "^0.21.1",
     "postcss": "^7",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
