--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "postcss": "^7",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-ga": "^3.3.0",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^4.0.3",
