--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
+    "nanoid":"3.1.23",
     "semantic-ui-react": "^0.88.2",
     "styled-components": "^5.2.1",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat"
